--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -8,11 +8,18 @@
 
     <include
         android:id="@+id/include2"
-        layout="@layout/toolbar_3" />
+        layout="@layout/toolbar_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_bottom" />
+        layout="@layout/toolbar_bottom"
+        android:layout_marginTop="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include2" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesRecyclerView"
