--- a/app/src/main/res/layout/activity_tagesbuch.xml
+++ b/app/src/main/res/layout/activity_tagesbuch.xml
@@ -99,16 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <Spinner
-                    android:id="@+id/spinner6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:entries="@array/data3" />
-
-            </LinearLayout>
+                android:orientation="horizontal"/>
 
             <CalendarView
                 android:id="@+id/calendarView"
