--- a/app/src/main/res/layout/activity_notfallkontakt.xml
+++ b/app/src/main/res/layout/activity_notfallkontakt.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotfallKontakte">
+    tools:context=".other.NotfallKontakte">
 
     <include
         android:id="@+id/includeNotfall"
