--- a/app/src/main/res/layout/activity_tagesbuch_list.xml
+++ b/app/src/main/res/layout/activity_tagesbuch_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TagesbuchList">
+    tools:context=".tagesbuch.TagesbuchList">
 
     <include
         android:id="@+id/toolbar_3"
