--- a/app/src/main/res/layout/activity_registrierung_1.xml
+++ b/app/src/main/res/layout/activity_registrierung_1.xml
@@ -9,6 +9,7 @@
     <include
         android:id="@+id/registrierung_toolbar1"
         layout="@layout/toolbar_1"
+        app:layout_constraintBottom_toTopOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -16,230 +17,223 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        tools:layout_editor_absoluteY="60dp" />
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        xmlns:tools="http://schemas.android.com/tools"-->
-<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--        android:id="@+id/start_seite_toolbar5"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="60dp"-->
-<!--        android:background="@android:color/darker_gray"-->
-<!--        android:minHeight="?attr/actionBarSize"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:theme="@style/ToolbarColoredBackArrow"-->
-<!--        app:titleTextColor="@android:color/white">-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/imageViewRegister"-->
-<!--                android:layout_width="61dp"-->
-<!--                android:layout_height="44dp"-->
-<!--                app:srcCompat="@drawable/ic_menu_button"-->
-<!--                tools:layout_editor_absoluteX="411dp"-->
-<!--                tools:layout_editor_absoluteY="58dp" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/hilfe"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_gravity="end"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                android:text="Hilfe"-->
-<!--                android:textAllCaps="false"-->
-<!--                android:textColor="@android:color/white"-->
-<!--                tools:layout_editor_absoluteX="82dp"-->
-<!--                tools:layout_editor_absoluteY="4dp" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/profilRegister"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="end"-->
-<!--                android:text="|"-->
-<!--                android:textColor="@android:color/white"-->
-<!--                android:textSize="20sp"-->
-<!--                tools:layout_editor_absoluteX="320dp"-->
-<!--                tools:layout_editor_absoluteY="18dp" />-->
-
-<!--            <Button-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_gravity="end"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                android:text="Profil"-->
-<!--                android:textAllCaps="false"-->
-<!--                android:textColor="@android:color/white"-->
-<!--                tools:layout_editor_absoluteX="82dp"-->
-<!--                tools:layout_editor_absoluteY="4dp" />-->
-<!--    </androidx.appcompat.widget.Toolbar>-->
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="236dp"
-        android:layout_height="308dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="85dp"
-        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/registrierung_toolbar1" />
+    <!--    <androidx.appcompat.widget.Toolbar-->
+    <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--        xmlns:tools="http://schemas.android.com/tools"-->
+    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--        android:id="@+id/start_seite_toolbar5"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="60dp"-->
+    <!--        android:background="@android:color/darker_gray"-->
+    <!--        android:minHeight="?attr/actionBarSize"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:theme="@style/ToolbarColoredBackArrow"-->
+    <!--        app:titleTextColor="@android:color/white">-->
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registrierung"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+    <!--            <ImageView-->
+    <!--                android:id="@+id/imageViewRegister"-->
+    <!--                android:layout_width="61dp"-->
+    <!--                android:layout_height="44dp"-->
+    <!--                app:srcCompat="@drawable/ic_menu_button"-->
+    <!--                tools:layout_editor_absoluteX="411dp"-->
+    <!--                tools:layout_editor_absoluteY="58dp" />-->
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E-Mail"
-            android:textSize="16sp" />
+    <!--            <Button-->
+    <!--                android:id="@+id/hilfe"-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:layout_gravity="end"-->
+    <!--                android:background="@android:color/transparent"-->
+    <!--                android:text="Hilfe"-->
+    <!--                android:textAllCaps="false"-->
+    <!--                android:textColor="@android:color/white"-->
+    <!--                tools:layout_editor_absoluteX="82dp"-->
+    <!--                tools:layout_editor_absoluteY="4dp" />-->
 
-        <EditText
-            android:id="@+id/editTextTextEmailAddress2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="E-Mail eingeben"
-            android:inputType="textEmailAddress" />
+    <!--            <TextView-->
+    <!--                android:id="@+id/profilRegister"-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_gravity="end"-->
+    <!--                android:text="|"-->
+    <!--                android:textColor="@android:color/white"-->
+    <!--                android:textSize="20sp"-->
+    <!--                tools:layout_editor_absoluteX="320dp"-->
+    <!--                tools:layout_editor_absoluteY="18dp" />-->
 
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="210dp"
-            android:layout_height="wrap_content"
-            android:text="E-Mail bestätigen" />
+    <!--            <Button-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:layout_gravity="end"-->
+    <!--                android:background="@android:color/transparent"-->
+    <!--                android:text="Profil"-->
+    <!--                android:textAllCaps="false"-->
+    <!--                android:textColor="@android:color/white"-->
+    <!--                tools:layout_editor_absoluteX="82dp"-->
+    <!--                tools:layout_editor_absoluteY="4dp" />-->
+    <!--    </androidx.appcompat.widget.Toolbar>-->
 
-        <EditText
-            android:id="@+id/editTextTextEmailAddress3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="E-Mail bestätigen"
-            android:inputType="textEmailAddress" />
-
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="211dp"
-            android:layout_height="wrap_content"
-            android:text="Passwort" />
-
-        <EditText
-            android:id="@+id/editTextTextPassword2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Passwort eingeben"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="210dp"
-            android:layout_height="wrap_content"
-            android:text="Passwort bestätigen" />
-
-        <EditText
-            android:id="@+id/editTextTextPassword3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Passwort bestätigen"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="124dp"
-            android:text="Oder Anmelden mit:"
-            android:textColor="@color/black" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="38dp"
-        android:orientation="horizontal"
-        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <TextView
-            android:id="@+id/textView19"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:onClick="toRegistrieren"
-            android:text="Registrieren"
-            android:textColor="#2196F3" />
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:onClick="abbrechen"
-            android:text="Abbrechen"
-            android:textColor="#2196F3" />
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView21"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:onClick="toDatenschutz"
-            android:text="Datenschutz"
-            android:textColor="#2196F3" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Registrierung"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="220dp"
-        android:layout_height="148dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="E-Mail"
+                    android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Oder Anmelden mit:"
-            android:textColor="@color/black" />
+                <EditText
+                    android:id="@+id/editTextTextEmailAddress2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="E-Mail eingeben"
+                    android:inputType="textEmailAddress" />
 
-        <Button
-            android:id="@+id/button8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Mit Google anmelden"
-            android:textColor="@color/black"
-            app:backgroundTint="@color/white" />
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="E-Mail bestätigen" />
 
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Mit Facebook anmelden"
-            android:textColor="@color/black"
-            app:backgroundTint="@color/white" />
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/editTextTextEmailAddress3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="E-Mail bestätigen"
+                    android:inputType="textEmailAddress" />
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Passwort" />
+
+                <EditText
+                    android:id="@+id/editTextTextPassword2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Passwort eingeben"
+                    android:inputType="textPassword" />
+
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Passwort bestätigen" />
+
+                <EditText
+                    android:id="@+id/editTextTextPassword3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Passwort bestätigen"
+                    android:inputType="textPassword" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView18"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Oder Anmelden mit:"
+                        android:textColor="@color/black" />
+
+                    <Button
+                        android:id="@+id/button8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Mit Google anmelden"
+                        android:textColor="@color/black"
+                        app:backgroundTint="@color/white" />
+
+                    <Button
+                        android:id="@+id/button7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Mit Facebook anmelden"
+                        android:textColor="@color/black"
+                        app:backgroundTint="@color/white" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:onClick="toRegistrieren"
+                        android:text="Registrieren"
+                        android:textColor="#2196F3" />
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:onClick="abbrechen"
+                        android:text="Abbrechen"
+                        android:textColor="#2196F3" />
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:onClick="toDatenschutz"
+                        android:text="Datenschutz"
+                        android:textColor="#2196F3" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
