--- a/app/src/main/res/layout/activity_startseite.xml
+++ b/app/src/main/res/layout/activity_startseite.xml
@@ -21,12 +21,10 @@
         app:layout_constraintTop_toBottomOf="@+id/include18" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="38dp"
-        android:layout_marginBottom="74dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,40 +33,40 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="330dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:onClick="toChatBot"
             android:text="ChatBot"
             app:backgroundTint="@color/white" />
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="330dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:onClick="toTagebuch"
             android:text="Tagebuch"
             app:backgroundTint="@color/white" />
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="330dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:onClick="toTagesziel"
             android:text="Tagesziel"
             app:backgroundTint="@color/white" />
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="330dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:onClick="toUbungen"
             android:text="Übungen"
             app:backgroundTint="@color/white" />
 
         <Button
             android:id="@+id/button9"
-            android:layout_width="330dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:onClick="toWiki"
             android:text="Wiki"
             app:backgroundTint="@color/white" />
