--- a/app/src/main/res/layout/activity_tagesbuch.xml
+++ b/app/src/main/res/layout/activity_tagesbuch.xml
@@ -16,7 +16,6 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        android:layout_marginTop="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include5" />
@@ -99,7 +98,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal"/>
+                android:orientation="horizontal">
+                <Spinner
+                    android:id="@+id/spinner6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:entries="@array/data3" />
+            </LinearLayout>
+
+
 
             <CalendarView
                 android:id="@+id/calendarView"
