--- a/app/src/main/res/layout/activity_wiki_info.xml
+++ b/app/src/main/res/layout/activity_wiki_info.xml
@@ -6,30 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".wiki.WikiItem">
 
-    <include layout="@layout/toolbar_3" />
+    <include
+        android:id="@+id/include7"
+        layout="@layout/toolbar_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        tools:layout_editor_absoluteY="60dp" />
+        android:layout_marginTop="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include7" />
 
     <ScrollView
-        android:layout_width="334dp"
-        android:layout_height="550dp"
+        android:id="@+id/scrollView5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="1dp"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/wiki_name_in_info"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textSize="34sp"
